--- a/src/components/layout/About/styles.module.css
+++ b/src/components/layout/About/styles.module.css
@@ -1,26 +1,26 @@
 .conteiner {
     background-color: #008B49;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-    padding: 6rem 0 6rem;
+    padding: 6rem 0;
     min-height: 100vh; 
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-areas: "header header header header" "main main sidebar sidebar" ". . . .";
     
     
 }
 
-.conteiner_texto h1 {
+.conteiner h1 {
+    grid-area: header;
     text-align: center;
     padding: 30px;
-    color: white;
+    color: #fff;
     font-family: "Raleway", sans-serif;
 }
-.conteiner_texto p {
+.conteiner p {
+    grid-area: main;
     font-family: "Raleway", sans-serif;
     font-weight: 300;
     font-size: 1.2em;
-   
     padding: 30px;
     width: 100%;
     color: #fff;
@@ -28,7 +28,8 @@
     
 }
 .conteiner_img {
-    padding: 3rem 3rem;
+    grid-area: sidebar;
+    padding: 3rem;
     width: 300px;
     height: 300px;
 
@@ -38,7 +39,40 @@
     height: 100%;
     margin: 0;
 }
-.conteiner_texto span {
+.conteiner span {
     color: black;
-    font-weight: bold;
+    font-weight: 700;
+}
+
+@media screen and (max-width: 700px) {
+    .conteiner {
+        display:grid;
+        grid-template-rows: auto;
+        grid-template-areas: "header header header header" "main main main main" ". sidebar sidebar ."
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .conteiner_img {
+        display:none
+    }
+}
+
+@media screen and (min-height: 1500px) {
+    .conteiner p {
+        font-size:2vw
+    }
+
+    .conteiner h1 {
+        font-size: 4vw
+    }
+
+    .conteiner_img {
+        width: 30vw;
+        height: 30vw
+    }
+
+    .conteiner_img img {
+        width: 25vw
+    }
 }
