--- a/src/components/layout/Footer/styles.module.css
+++ b/src/components/layout/Footer/styles.module.css
@@ -10,28 +10,36 @@
 }
 .conteiner h2 {
     font-size: 15px;
-    margin: 0px 10px 0 10px;
+    margin: 0 10px;
     padding: 0 0 0.2rem 0;
     color: #efefef;
 
     
 }
 .conteiner_icon {
-    
-    display: flex;
-    
+    display: flex;  
 
 }
 .icon {
     color: #efefef;
-    margin: 0px 10px 0 10px;
+    margin: 0px 10px;
+    font-size: 15px;
 }
 .icon a{
     color: inherit;
 
 }
 .conteiner h3 {
-    padding: 1rem 1rem;
+    padding: 1rem;
     font-size: 15px;
     
+}
+
+@media screen and (min-height: 1500px) {
+    .icon , .conteiner h2 {
+        font-size: 2vw;
+    }
+    .icon {
+        font-size: 2vw;
+    }
 }
