--- a/src/components/layout/Navbar/styles.module.css
+++ b/src/components/layout/Navbar/styles.module.css
@@ -1,13 +1,10 @@
 .conteiner { 
-    /* background-color: rgb(19, 17, 17); */
     background-color: black;
     box-sizing: border-box;  
     position: fixed;   
     width: 100%;
     
-   
 
-    
 }
 
 .conteiner_header {
@@ -97,11 +94,11 @@
 .menu_principal ul {
     
     display: flex;
-    margin: 0;
+    margin: auto 0;
     justify-content: space-around;
 }
 .menu_principal li {
-    
+    font-size: 1.5vw;
     list-style-type: none;
     margin: 0;
 }
@@ -122,4 +119,22 @@
   .hamburguer_menu nav {
     display: block;
   }
+}
+
+@media screen and (min-height: 1500px) {
+    .conteiner {
+        height:5vw
+    }
+
+    .conteiner_logo img {
+        width: 5vw;
+        height: 5vw
+    }
+
+    .conteiner_logo {
+        width: 100%;
+        height: 100%;
+        max-width: 15vw;
+        max-height: 15vw
+    }
 }
