--- a/src/components/layout/Banner/styles.module.css
+++ b/src/components/layout/Banner/styles.module.css
@@ -115,7 +115,7 @@
     }
 
     .contato {
-        border: .5vw outset #E20F31;
+        border: .5vw outset rgb(108, 224, 108);
         border-radius: 4vw;
         font-size: 2vw
     }
