--- a/src/components/layout/Skills/styles.module.css
+++ b/src/components/layout/Skills/styles.module.css
@@ -10,6 +10,7 @@
     flex-wrap: wrap;
     padding: 10vw;
     
+    
 }
 .conteiner_atuacao {
     display: grid;
@@ -41,7 +42,8 @@
    padding: 20px;
    box-shadow: 4px 4px 6px 4px black;
    margin: 10px 10px 10px 0;
-   transition: box-shadow 0.4s ease
+   transition: box-shadow 0.4s ease;
+  
   
     
 }
@@ -59,11 +61,13 @@
 }
 .conteiner_icons div {
     justify-items: center;
+
 }
 .icon {
     color: #00592F;
     width: 10vw;
     height: 10vw;
+    align-items: center;
 }
 @media screen and (max-width: 360px) {
     .conteiner_atuacao div {
